--- a/Aerosoul/package.json
+++ b/Aerosoul/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.9.2",
     "mongo": "^0.1.0",
     "morgan": "~1.5.1",
+    "request": "^2.72.0",
     "serve-favicon": "~2.2.0"
   }
 }
