--- a/Aerosoul/package.json
+++ b/Aerosoul/package.json
@@ -12,6 +12,7 @@
     "express": "~4.12.2",
     "jade": "~1.9.2",
     "mongo": "^0.1.0",
+    "mongoose": "^4.4.13",
     "morgan": "~1.5.1",
     "request": "^2.72.0",
     "serve-favicon": "~2.2.0"
